5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1822_3176.log
== TEST (2019-06-13 10:09:45) 
-- CODE:
x = input("digite: ")

c = 0 
v = 0

for i range(len(x)):
	if (x[i]== "a" or x[i]== "e" or x[i]== "i" or x[i]== "o" or x[i]== "u"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- ERROR:
File "XXXX", line 6
    for i range(len(x)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:43) 
-- CODE:
x = input("digite: ").lawer()

c = 0 
v = 0

for i range(len(x)):
	if (x[i]== "a" or x[i]== "e" or x[i]== "i" or x[i]== "o" or x[i]== "u"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- ERROR:
File "XXXX", line 6
    for i range(len(x)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:42) 
-- CODE:
q = input("digite: ").lawer()

c = 0 
v = 0

for i range(len(q)):
	if (x[i]== "a" or x[i]== "e" or x[i]== "i" or x[i]== "o" or x[i]== "u"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- ERROR:
File "XXXX", line 6
    for i range(len(q)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:14:50) 
-- CODE:
q = input("digite: ").upper()

c = 0 
v = 0
print(q)
for i range(len(q)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- ERROR:
File "XXXX", line 6
    for i range(len(q)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:03) 
-- CODE:
q = input("digite: ").upper()

c = 0 
v = 0
print(q)
for i in range(len(q)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:36) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
print(q)
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(q)
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:49) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
print(x)
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- OUTPUT:
CACHORRO
5
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:03) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- OUTPUT:
5
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:16:21) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- EXECUTION TIME:
0.627103
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
5
3
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
3
5
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
4
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:26) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(c)
print(v)
		
-- OUTPUT:
5
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:08) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(v)
print(c)
		
-- OUTPUT:
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:08) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(v)
print(c)
		
-- OUTPUT:
3
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:17:21) 
-- CODE:
x = input("digite: ").upper()

c = 0 
v = 0
for i in range(len(x)):
	if (x[i]== "A" or x[i]== "E" or x[i]== "I" or x[i]== "O" or x[i]== "U"):
		v = v + 1
	else:
		c = c + 1
		
print(v)
print(c)
		
-- EXECUTION TIME:
0.553892
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
3
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
